# stm32code-without-driver

./: .cproject  .gitignore  CMakeLists.txt
Inc/: GB_UART.h  GB_adc.h  cmsis_gcc.h  gb_t_delay.h  mock_stm32f4xx_hal.h
Src/: GB_adc.c  GB_uart.c  gb_gpio.c  mock_stm32f1xx.h
tests/: CMakeLists(COPY).txt  CMakeLists.txt  test_main.cpp
